--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -7,10 +7,31 @@
 }
 
 html {
-    // defined what 1 rem is
+    // defines what 1 rem is (10px)
     font-size: 62.5%;
+
+    @include respond(tab-land) { // width < 1200 ?
+        font-size: 56.25%; // 1rem = 9px ... 9px / 16px
+    }
+
+    @include respond(tab-port) { // width < 900 ?
+        font-size: 50%;  // 1rem = 8px ... 8px / 16px
+    }
+
+    @include respond(phone) {
+        font-size: 30%;
+    }
+    
+    @include respond(big-desktop) {
+        font-size: 75%; // 1rem = 12px ... 12px / 16px
+    }
 }
 
 body {
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
