--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         display: inline-block;
@@ -9,6 +10,10 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+
+        // for button element
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
@@ -32,6 +37,15 @@
 
         &::after {
             background-color: $color-white;
+        }
+    }
+
+    &--green {
+        background-color: $color-primary;
+        color: $color-white;
+
+        &::after {
+            background-color: $color-primary;
         }
     }
 
