--- a/Natours/starter/sass/layout/_header.scss
+++ b/Natours/starter/sass/layout/_header.scss
@@ -1,17 +1,35 @@
 .header {
-    height: 95vh;
-    background-image: 
-        linear-gradient(
+    height: 85vh;
+    background-image: linear-gradient(
+        to right bottom, 
+        rgba($color-primary-light, .8),
+        rgba($color-primary-dark, .8)
+    ),
+    url('../img/hero-small.jpg');
+    background-size: cover;
+    background-position: top;
+    position: relative;
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) { // for firefox
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        height: 95vh;
+    }
+
+    @media (min-resolution: 192dpi) and (min-width: 37.5rem),
+           (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5rem), // for safari
+           (min-width: 125em) { // fallback
+        background-image: linear-gradient(
             to right bottom, 
             rgba($color-primary-light, .8),
             rgba($color-primary-dark, .8)
         ),
         url('../img/hero.jpg');
-    background-size: cover;
-    background-position: top;
-    position: relative;
+    }
 
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    @include respond(phone) {
+        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
 
     &__logo-box {
         position: absolute;
